--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hola Karlo este es uno de los primeros
+    <p>Hola, este es uno de los primeros
         ejercicios que estas haciendo programando
-        perdon la ortografia
+        perdon la ortografia. Estoy haciendo varias cosas
+        al mismo tiempo
     </p>
 </body>
 </html>
